tap complete on all working commands kill the hidden stand entities when removed